--- a/statistiky.html
+++ b/statistiky.html
@@ -148,6 +148,7 @@ th{
 <h2>Historie zápasů</h2>
 
 <div class="filterBar">
+
 <select id="filterCategory">
 <option value="">Všechny kategorie</option>
 <option>Extraliga - základní část</option>
@@ -157,6 +158,7 @@ th{
 
 <button onclick="applyFilter()">Filtrovat</button>
 <button onclick="resetFilter()">Zobrazit vše</button>
+
 </div>
 
 <div class="tableWrap">
@@ -194,11 +196,52 @@ th{
 
 </div>
 
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyD0jDnVNHZAs83g6FGwQT_nOpOCyT4NTNU",
+  authDomain: "statistiky-6310a.firebaseapp.com",
+  projectId: "statistiky-6310a",
+  storageBucket: "statistiky-6310a.appspot.com",
+  messagingSenderId: "1023222901562",
+  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db=db;
+window.addDoc=addDoc;
+window.collection=collection;
+window.getDocs=getDocs;
+window.deleteDoc=deleteDoc;
+window.doc=doc;
+window.query=query;
+window.orderBy=orderBy;
+
+window.addEventListener("load", loadMatches);
+
+</script>
+
 <script>
 
 let loadedLines=[];
 let activeRow=null;
 let allMatches=[];
+
+function applyFilter(){
+    const cat=document.getElementById("filterCategory").value;
+    renderMatches(cat);
+}
+
+function resetFilter(){
+    filterCategory.value="";
+    renderMatches();
+}
 
 document.getElementById("fileInput").addEventListener("change", e=>{
     const reader=new FileReader();
@@ -209,7 +252,58 @@ document.getElementById("fileInput").addEventListener("change", e=>{
     reader.readAsText(e.target.files[0]);
 });
 
-function calcScore(stats){
+async function saveMatch(){
+
+    if(!category.value || !homeTeam.value || !awayTeam.value){
+        alert("Vyber kategorii a oba týmy.");
+        return;
+    }
+
+    if(loadedLines.length<20){
+        alert("Nejprve nahraj zapas.txt");
+        return;
+    }
+
+    await addDoc(collection(db,"zapasy"),{
+        category:category.value,
+        homeTeam:homeTeam.value,
+        awayTeam:awayTeam.value,
+        stats:loadedLines,
+        created:Date.now()
+    });
+
+    loadMatches();
+}
+
+async function deleteMatch(id){
+
+    const password = prompt("Zadej heslo pro smazání zápasu:");
+
+    if(password !== "Lokomotiva"){
+        alert("Špatné heslo.");
+        return;
+    }
+
+    if(!confirm("Opravdu smazat zápas?")) return;
+
+    await deleteDoc(doc(db,"zapasy",id));
+    loadMatches();
+}
+
+async function loadMatches(){
+
+    allMatches=[];
+    const q=query(collection(db,"zapasy"),orderBy("created","desc"));
+    const snapshot=await getDocs(q);
+
+    snapshot.forEach(docSnap=>{
+        allMatches.push({id:docSnap.id,...docSnap.data()});
+    });
+
+    renderMatches();
+}
+
+function calculateScore(stats){
 
     let awayGoals =
         Number(stats[6])+
@@ -221,7 +315,6 @@ function calcScore(stats){
         Number(stats[17])+
         Number(stats[18]);
 
-    // OT vítězný gól
     if(stats[9]==="11") awayGoals++;
     if(stats[19]==="11") homeGoals++;
 
@@ -230,16 +323,71 @@ function calcScore(stats){
     if(stats[20]==="1" || stats[20]==="2"){
         suffix=" SN";
     }
-    else{
-        if(
-            (stats[9]==="11" || stats[19]==="11") &&
-            Math.abs(homeGoals-awayGoals)===1
-        ){
-            suffix=" OT";
-        }
+    else if(
+        (stats[9]==="11" || stats[19]==="11") &&
+        Math.abs(homeGoals-awayGoals)===1
+    ){
+        suffix=" OT";
     }
 
     return homeGoals+" : "+awayGoals+suffix;
+}
+
+function renderMatches(filterCategory=""){
+
+    const tbody=document.querySelector("#history tbody");
+    tbody.innerHTML="";
+
+    let first=true;
+
+    allMatches.forEach(m=>{
+
+        if(filterCategory && m.category!==filterCategory) return;
+
+        const score = calculateScore(m.stats);
+
+        const tr=document.createElement("tr");
+
+        tr.innerHTML=`
+        <td>${new Date(m.created).toLocaleDateString()}</td>
+        <td>${m.category}</td>
+        <td>${m.homeTeam}</td>
+        <td>${m.awayTeam}</td>
+        <td>${score}</td>
+        <td><button class="deleteBtn">Smazat</button></td>
+        `;
+
+        tr.onclick=()=>{
+            setActiveRow(tr);
+            showDetail(m.stats);
+        };
+
+        tr.querySelector(".deleteBtn").onclick=(e)=>{
+            e.stopPropagation();
+            deleteMatch(m.id);
+        };
+
+        tbody.appendChild(tr);
+
+        if(first){
+            setActiveRow(tr);
+            showDetail(m.stats);
+            first=false;
+        }
+    });
+}
+
+function setActiveRow(row){
+    if(activeRow) activeRow.classList.remove("activeMatch");
+    activeRow=row;
+    activeRow.classList.add("activeMatch");
+}
+
+function showDetail(stats){
+    for(let i=0;i<20;i++){
+        document.getElementById("ds"+i).innerText=stats[i];
+    }
+    document.getElementById("detailTable").style.display="table";
 }
 
 </script>
